criadas rotas e funcoes para gravar tarefas no banco de dados

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,10 @@
     <div class="col-md-4 offset-md-4 my-auto">
         <div class="card">
             <div class="card-header">
-                <form action="">
+                <form action="/criar-tarefa" method="post">
                     <div class="form-group"><!-- criando o formulario separado do resto -->
-                        <input type="text" name="conteúdo_tarefa"placeholder="O que pretendes fazer?" class="form-control"
-                        autofocus>
+                        <input type="text" name="conteúdo_tarefa" placeholder="tarefas"
+                               class="form-control" autofocus>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block"> <!-- determina local e que ocupe a largura total -->
                             Adicionar à lista de tarefas
@@ -41,6 +41,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
