--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
     <!-- font do Google gostei mais dessa do que da outra. -->
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
+    <!-- font awesome para icones -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
     <!-- vincula estilo ao html -->
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 
@@ -37,6 +41,37 @@
                     </form>
                 </div>
             <div class="card-body">
+                <ul class="list-group">
+                    {% for tarefa in to_do %}
+                    <li class="list-group-item">
+                        <span class="{% if tarefa.feita==true %} tarefa_feita {% endif %}">{{tarefa.conteudo}} </span>
+<!-- Optei por trocar o icone por outro que gostei mais -->
+                        <a href="/tarefa-feita/{{tarefa.id}}" style="text-decoration:none" >
+                        <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="green"
+                             class="bi bi-clipboard-check" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0
+                            1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1
+                             1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1
+                            .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11
+                            2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                        </svg>
+                        </a>
+                        <a href="/eliminar-tarefa/{{tarefa.id}}" style="text-decoration:none">
+                            <svg class="lixeira" width="2em" height="2em" viewBox="0 0 16 16" fill="red"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5.5 5.5A.5.5 0 016 6v6a.5.5 0 01-1 0V6a.5.5 001.5-.5zm2.5 0a.5.5 0 01.5.5v6a.
+                                5.5 0 01-1 0V6a.5.5 0 01.5-.5zm3 .5a.5.5 0 00-10v6a.5.5 0 001 0V6z"/>
+                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 01-1 1H13v9a2 2 0
+                                01-2 2H5a2 2 0 01-2-2V4h-.5a1 1 0 01-1-1V2a1 1 0 011-1H6a1 1 0 011-1h2a1 1 0 011
+                                1h3.5a1 1 0 011 1v1zM4.118 4L4 4.059V13a1 1 0 001 1h6a1 1 0 001-1V4.059L11.882
+                                4H4.118zM2.5 3V2h11v1h-11z" clip-rule="evenodd"/>
+                            </svg>
+                        </a>
+                    </li>
+                    {% endfor %}-
+                </ul>
             </div>
         </div>
     </div>
